testsuite/tests/parser/should_compile/read050.hs

{-# OPTIONS_GHC -XKindSignatures #-}

module Foo where

import Data.Kind (Type)

data Foo (a :: Type) = Foo a

